--- a/Final Assignment.ipynb
+++ b/Final Assignment.ipynb
@@ -1057,7 +1057,7 @@
    },
    "outputs": [],
    "source": [
-    "make_graph(tesla_data, tesla_revenue, 'Tesla')"
+    "make_graph(tesla_data, tesla_revenue, 'Tesla Stock Graph')"
    ]
   },
   {
@@ -1079,7 +1079,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "make_graph(gme_data, gme_revenue, 'GameStop Stock Graph')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1114,9 +1116,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1128,7 +1130,47 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.9"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
+  "vp": {
+   "vp_config_version": "1.0.0",
+   "vp_menu_width": 273,
+   "vp_note_display": false,
+   "vp_note_width": 0,
+   "vp_position": {
+    "width": 278
+   },
+   "vp_section_display": false,
+   "vp_signature": "VisualPython"
   }
  },
  "nbformat": 4,
